# EducationTracker

./: .replit  AWS_LAMBDA_SETUP.md  README.md  pyproject.toml
attached_assets/: Pasted--1-2-3-4-ID-5-6-7--1741867202464.txt  Pasted--1-2-3-4-ID-5-6-7--1741868805248.txt  Pasted--1-2-3-4-ID-5-6-7--1741882026636.txt  Pasted-2025-03-13-12-09-58-532-job-search-INFO-Job-main-start-Status-starting-Details-timesta-1741867830931.txt  Pasted-2025-03-13-12-12-01-757-job-search-INFO-Job-main-start-Status-starting-Details-timesta-1741867934054.txt  Pasted-2025-03-13-12-14-29-482-job-search-INFO-Job-main-start-Status-starting-Details-timesta-1741868088797.txt  Pasted-2025-03-13-12-16-05-900-job-search-INFO-Job-main-start-Status-starting-Details-timesta-1741868182252.txt  Pasted-2025-03-13-16-23-25-458-job-search-INFO-Job-main-start-Status-starting-Details-timesta-1741883022228.txt  Pasted-2025-03-13-16-25-00-862-job-search-INFO-Job-main-start-Status-starting-Details-timesta-1741883108857.txt  Pasted-2025-03-13-16-27-46-766-job-search-INFO-Job-main-start-Status-starting-Details-timesta-1741883335194.txt  Pasted-2025-03-13-16-29-56-334-job-search-INFO-Job-main-start-Status-starting-Details-timesta-1741883451921.txt
src/: config.py  create_lambda_package.py  gemini_analyzer.py  hh_jobs.py  lambda_function.py  logger.py  main.py  run_telegram_bot.py  setup_webhook.py  sheets_handler.py  telegram_bot.py  utils.py
